--- a/templates/logado.html
+++ b/templates/logado.html
@@ -28,14 +28,16 @@
     <title>My Recipe</title>
   </head>
   
-  <body style="background-color:#fff; max-width: auto; height: max-content;">
+  <body style="background-color:#fff; height: max-content;">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="{{ url_for('static', filename='images/myrecipelogobranca.png') }}" alt="" width="80" height="80" class="d-inline-block align-text-left">
           My Recipe - Receitas Inteligentes
         </a>
-
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="d-flex">
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-1 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
@@ -76,6 +78,7 @@
   <div>
     <br><br><br><br><br><br>
   </div>
+ 
   <div>
 
     {% block conteudo %}
@@ -83,8 +86,8 @@
     {% endblock %}
 
   </div>
-
-</body> 
+</body>
+ 
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
