--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -70,8 +70,12 @@
   style="margin-top: 50px; margin-bottom:50px; display:flex; flex-direction:column; gap:2px; align-content: center;padding-left: 25%; padding-right: auto;">
   <form class="flex-column gap-2" action="{{url_for('buscar_ingredientes')}}" enctype="multipart/form-data"
     method="post">
-    <div id="formulario">
-      <h4>Busque por ingredientes</h4><br>
+    <h4>Busque por ingredientes
+    <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#formulario" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Abrir
+    </a></h4>
+    <div class="collapse" id="formulario">
+      
       <div class="form-group" id="campo0">
         <label style="width: auto;" for="autoSizingInput">Quantidade:
           <input type="number" class="form-control" name="quantidade0" id="autoSizingInput" min="0" step="0.01"
@@ -102,6 +106,7 @@
 
       </div>
     </div>
+    
 
     <script>
       var cont = 1;
@@ -179,6 +184,7 @@
     <div>
       <button type="submit" class="btn btn-primary">Buscar</button>
     </div>
+  
 
   </form>
 </div>
