--- a/templates/logado.html
+++ b/templates/logado.html
@@ -96,5 +96,6 @@
     <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/jquery.sticky.js')}}"></script>
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
+    <script src="{{url_for('static', filename='js/wz_tooltip.js')}}"></script>
   </body>
 </html>
