--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
 
-  <div class="flex flex-column" style="margin-top:50px; padding-left: 30%;padding-right: 30%">
+  <div class="flex flex-column" style="align-items:center; margin-top:50px; padding-left: 20%; padding-right: 20%">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -75,33 +75,33 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="static/images/livro.jpg" max-width="400" max-height="340" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="static/images/livro.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
             <h3>Deixe de lado aquele velho caderno</h3>
             <p style="color:white">Com o My Recipe, você cadastra suas receitas em poucos minutos.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="static/images/ingredientes.jpg" max-width="400" max-height="340" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="static/images/ingredientes.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
             <h3>Descubra novas receitas</h3>
             <p style="color:white">Encontre receitas por ingredientes e sistema de recomendação.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="static/images/truques-chefes-de-cozinha.jpg" max-width="400" max-height="340" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <img src="static/images/truques-chefes-de-cozinha.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
             <h3>Mão na massa</h3>
             <p style="color:white">Salve, avalie e prepare receitas especiais.</p>
           </div>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="carousel-control-prev-icon" aria-hidden="false"></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="carousel-control-next-icon" aria-hidden="false"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
