--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -50,7 +50,7 @@
 </head>
 
 
-<body style="background-color:#f2f2f2; height: max-content; min-width: max-content;">
+<body style="background-color:#f2f2f2; height: max-content; width:auto;">
     <nav class="navbar navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
