--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -51,7 +51,7 @@
 
 
 <body style="background-color:#f2f2f2; height: max-content; width:auto;">
-    <nav class="navbar navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
+    <nav class="navbar navbar-expand-lg navbar-dark"; style="background-color: #c42020;min-width: max-content;width: 100%;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="{{ url_for('static', filename='images/myrecipelogobranca.png') }}" alt="" width="80" height="80" class="d-inline-block align-text-left">
