--- a/templates/logado.html
+++ b/templates/logado.html
@@ -28,7 +28,7 @@
     <title>My Recipe</title>
   </head>
   
-  <body style="background-color:#fff; height: max-content;">
+  <body style="background-color:#fff; height: max-content;width: max-content;">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
