--- a/templates/mostrar_receita.html
+++ b/templates/mostrar_receita.html
@@ -174,6 +174,7 @@
       function copiarTexto(id) {
           texto = 'Vi essa receita e lembrei de você!\nAcesse: https://my-recipe-receitas.com/receita_sl/'+id
           navigator.clipboard.writeText(texto)
+          document.execCommand('copy',texto)
           alert("Envie o link para seus amigos!\nTexto copiado: " + texto);
       }
     </script>
