--- a/templates/logado.html
+++ b/templates/logado.html
@@ -86,7 +86,14 @@
     {% endblock %}
 
   </div>
+  
 </body>
+<footer style="position: auto;bottom: -1px;left:30%;right:30%; align-self: flex-end;">
+  <div class="flex flex-column" style="margin-top:50px;text-align: center; align-items:center; align-self: flex-end;">
+    <p>Precisa de ajuda? <a href="mailto:suporte.myrecipe@gmail.com" target="_blank">suporte.myrecipe@gmail.com</a></p>
+  </div>  
+  <p class="text-center text-muted">© 2022 My Recipe - Receitas Inteligentes</p>
+</footer> 
  
 
     
