--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -78,7 +78,7 @@
       
       <div class="form-group" id="campo0">
         <label style="width: auto;" for="autoSizingInput">Quantidade:
-          <input type="number" class="form-control" name="quantidade0" id="autoSizingInput" min="0" step="0.01"
+          <input type="number" class="form-control" name="quantidade0" id="autoSizingInput" min="0.01" step="0.01"
             pattern="^\d+(?:\.\d{1,2})?$" placeholder="0,00" required>
         </label>
 
@@ -114,7 +114,7 @@
         cont++;
         $('#formulario').append('<div class="form-group" id="campo' + cont + '">\
                   <label style="width: auto;" for="autoSizingInput">Quantidade:\
-                      <input type="number" class="form-control" name="quantidade'+ cont + '" id="autoSizingInput" min="0" step="0.01" pattern="^\d+(?:\.\d{1,2})?$" placeholder="0,00" required>\
+                      <input type="number" class="form-control" name="quantidade'+ cont + '" id="autoSizingInput" min="0.01" step="0.01" pattern="^\d+(?:\.\d{1,2})?$" placeholder="0,00" required>\
                   </label>\
                   <label style="width: auto;" for="autoSizingInput">Unidade de medida:\
                   <select class="form-select" name="unidademedida'+ cont + '" id="autoSizingInput" required>\
@@ -153,7 +153,7 @@
         var button_id = $(this).attr("id");
         $('#formulario').append('<div class="form-group" id="campo' + cont + '">\
                   <label style="width: auto;" for="autoSizingInput">Quantidade:\
-                      <input type="number" class="form-control" name="quantidade'+ cont + '" id="autoSizingInput" min="0" step="0.01" pattern="^\d+(?:\.\d{1,2})?$" placeholder="0,00" required>\
+                      <input type="number" class="form-control" name="quantidade'+ cont + '" id="autoSizingInput" min="0.01" step="0.01" pattern="^\d+(?:\.\d{1,2})?$" placeholder="0,00" required>\
                   </label>\
                   <label style="width: auto;" for="autoSizingInput">Unidade de medida:\
                   <select class="form-select" name="unidademedida'+ cont + '" id="autoSizingInput" required>\
@@ -197,19 +197,18 @@
       {% for receita in receitas_novas %}
       {% for caminho in paths | selectattr('id_receita', 'equalto', receita.id_receita) %}
       
-      <div class="resize card flex-item" style=" min-width: 200px;max-width: max-content; ">
-        <div class="flex flex-row">
+      <div class="resize card" style="min-width: 200px;max-width: auto; ">
+        
           <a href="{{ url_for('mostrar_receita',id_receita=receita.id_receita) }}">
-            <img src="static/uploads/recipes/{{receita.id_receita}}/{{caminho.path_imagem}}" alt="Card"
-              class="card-img-top">
+            <img class="card-img-top" src="static/uploads/recipes/{{receita.id_receita}}/{{caminho.path_imagem}}" alt="Card">
           </a>
-        </div>
-        <div class="flex flex-row">
+          
           <hr style="color:rgb(254, 244, 227)">
-        </div>
-        <div class="flex flex-row">
-          <h5>{{receita.titulo}}</h5>
-        </div>
+        
+          <div class="card-body">
+          <h5 class="card-text row">{{receita.titulo}}</h5>
+          </div>  
+        
       </div>
 
       {% endfor %}
