ajustes no front

--- a/templates/cadastrar_preferencias.html
+++ b/templates/cadastrar_preferencias.html
@@ -35,7 +35,7 @@
     }
 </style>
 
-<div style="display:flex; flex-direction:column; text-align: center; justify-content:center; padding-left: 30%;padding-right: 30%;">
+<div style="display:flex; flex-direction:column; text-align: center; justify-content:center; padding-left: 30%;padding-right: 30%;margin-top:130px ;">
 
 
 
