--- a/templates/editar_receita.html
+++ b/templates/editar_receita.html
@@ -46,7 +46,7 @@
 
 
 
-<div class="flex-container">
+<div class="flex-container" style="margin-top:130px">
     <div class="flex-item">
         <h5 class="flw-row gap-5" style="color:rgb(83, 83, 83)">Editar Receita</h5><br>
         <form class="flex-column gap-2" action="{{url_for('editar_receita',id_receita=receita.id_receita)}}" enctype="multipart/form-data"
