--- a/templates/minhas_receitas.html
+++ b/templates/minhas_receitas.html
@@ -64,7 +64,7 @@
   {% for receita in receitas %}
   {% for caminho in paths %}
   {% if receita.id_receita == caminho.id_receita %}
-  <div class="flex-container">
+  <div class="flex-container" style="margin-top:130px">
   <div class="flex-item gap-2" style="padding: 10px; background-color:rgb(255, 255, 255)">
   <div class="flex-row gap-2">
     <div class="card gap-2" style="padding: 10px; width: 15rem; max-width: max-content">
