--- a/templates/cadastrar_receita.html
+++ b/templates/cadastrar_receita.html
@@ -49,7 +49,7 @@
 {% endif %}
 {% endwith %}
 </div>
-<div class="flex-container">
+<div class="flex-container" style="margin-top:130px">
 
     <div class="flex-item">
         <h5 class="flw-row gap-5" style="color:rgb(83, 83, 83)">Cadastro de Receitas</h5><br>
