--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -1,58 +1,6 @@
-{% extends "logado.html" %} {% block conteudo %}
-<body style="background-color:#fff; height: max-content;width: auto;"><div id="WzTtDiV" style="visibility: hidden; position: absolute; overflow: hidden; padding: 0px; width: 0px; left: 0px; top: 0px;"></div>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark" ;="" style="background-color: #c42020;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="/static/images/myrecipelogobranca.png" alt="" width="80" height="80" class="d-inline-block align-text-left">
-        My Recipe - Receitas Inteligentes
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="d-flex">
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-1 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/mostrar_salvas">Receitas salvas</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Cadastros
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="/cadastrar_receita">Receitas</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown" style="width: 180px">
-              <a class="nav-link active dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Meu usuário
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                <li><a class="dropdown-item" href="#">Olá, Carlos Kasper</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/preferencias">Preferencias</a></li>
-                <li><a class="dropdown-item" href="/minhas_receitas">Minhas Receitas</a></li>
-                <li><a class="dropdown-item" href="/editar_perfil">Editar Perfil</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="/logout">Sair</a></li>
-              </ul>
-            </li>
-            
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-<div>
-  <br><br><br><br><br><br>
-</div>
-
-<div>
-
-  
+{% extends "logado.html" %} 
+{% block conteudo %}
+{{ pagedown.html_head() }}
 
 <style>
 .form-group {
@@ -168,7 +116,7 @@
   }
 }
 </style>
-<form class="flex-column gap-2" action="/buscar_titulo" enctype="multipart/form-data" method="post">
+<form class="flex-column gap-2" action="/buscar_titulo" enctype="multipart/form-data" method="post" style="margin-top: 130px">
 
   <div style="
   display: flex;
@@ -188,7 +136,7 @@
   width: 15%;
 ">
 
-  <input type="search" name="titulo" placeholder="Titulo" id="form1" class="form-control" style="
+  <input type="search" name="titulo" required placeholder="Titulo" id="form1" class="form-control" style="
     border-radius: 25px;
 ">
 
@@ -200,6 +148,9 @@
   <div style="
   margin-top: 30px;
 ">
+</form>
+<form class="flex-column gap-2" action="/buscar_ingrediente" enctype="multipart/form-data" method="post">
+
 
       <h4 style="
     margin-bottom: 20px;
@@ -438,18 +389,6 @@
 
 </div>
 
-
-
-
-
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="/static/js/jquery-3.3.1.min.js"></script>
-  <script src="/static/js/popper.min.js"></script>
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script src="/static/js/jquery.sticky.js"></script>
-  <script src="/static/js/main.js"></script>
-  <script src="/static/js/wz_tooltip.js"></script>
 
 
 
