--- a/templates/mostrar_receita.html
+++ b/templates/mostrar_receita.html
@@ -61,7 +61,7 @@
 
 
 
-<div class="flex-container">
+<div class="flex-container" style="margin-top:130px ;">
   
     <div class="flex-row gap-2" style="padding: 10px; background-color:rgb(255, 255, 255)">
       {% with messages = get_flashed_messages() %}
