ajustes no front

--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -17,6 +17,39 @@
   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
   <title>My Recipe</title>
   <style>
+  @media (max-width: 500px)
+{
+  .busque-por-titulo {
+    margin-bottom: 20px !important;
+    margin-top: 20px !important;
+  }
+
+  .column {
+    flex-direction: column !important;
+  }
+
+  .input-busca {
+    width: 80% !important;
+  }
+
+  .div-button {
+    width: 100% !important;
+    margin-top: 20px !important;
+  }
+
+  .form-group {
+    width: 100% !important;
+  }
+
+  .btn-primary {
+    width: 80% !important;
+  }
+
+  .navbar-brand {
+    width: 80%;
+    font-size: 14px;
+  }
+}
     .flex-container {
         display: flex;
         flex-direction: row;
