--- a/templates/logado.html
+++ b/templates/logado.html
@@ -24,6 +24,41 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
+<style>
+  @media (max-width: 500px)
+{
+  .busque-por-titulo {
+    margin-bottom: 20px !important;
+    margin-top: 20px !important;
+  }
+
+  .column {
+    flex-direction: column !important;
+  }
+
+  .input-busca {
+    width: 80% !important;
+  }
+
+  .div-button {
+    width: 100% !important;
+    margin-top: 20px !important;
+  }
+
+  .form-group {
+    width: 100% !important;
+  }
+
+  .btn-primary {
+    width: 80% !important;
+  }
+
+  .navbar-brand {
+    width: 80%;
+    font-size: 14px;
+  }
+}
+</style>
 
     <title>My Recipe</title>
   </head>
