--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -35,11 +35,12 @@
   align-items: center;
 }
 .banner video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 .banner .content {
   position: relative;
