--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,50 @@
 		
 <!--===============================================================================================-->
 </head>
+<style>
+	.banner {
+	  width: 100%;
+	  height: 100vh;
+	  overflow: hidden;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	}
+	.banner video {
+		position: fixed;
+		top: 0;
+		left: 0;
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
+	}
+	.banner .content {
+	  position: relative;
+	  z-index: 1;
+	  max-width: 1000px;
+	  margin: 0 auto;
+	  text-align: center;
+	}
+	.banner .content h1 {
+	  margin: 0;
+	  padding: 0;
+	  font-size: 5.5em;
+	  text-transform: uppercase;
+	  color: #ffff;
+	}
+	.banner .content p {
+	  font-size: 1.5em;
+	  color: #ffff;
+	}
+	.banner .content img {
+	  width: 40px;
+	  height: 40px;
+	}
+	</style>
+<div class="banner">
+	<video autoplay muted loop>
+		<source src="{{url_for('static', filename='images/teste.mp4')}}" type="video/mp4">
+	</video>	
 <body>
 
 	<div class="limiter">
@@ -109,4 +153,5 @@
 	<script src="{{ url_for('static', filename='login/js/main.js') }}"></script>
 
 </body>
+</div>
 </html>
