tira obrigatoriedade de cep e foto para cadastrar

--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -92,9 +92,9 @@
 					<span class="login100-form-title p-b-26">
 						Cadastro de usuário 
 					</span>
-					<div class="wrap-input100 validate-input">
-						<span class="focus-input100" data-placeholder="Escolha uma foto/avatar para perfil *"></span><br><br>
-						<input required class="input100" type="file" onchange="Filevalidation()" name="foto"  accept="image/png, image/jpeg"  multiple /> 
+					<div class="wrap-input100">
+						<span class="focus-input100" data-placeholder="Escolha uma foto/avatar para perfil "></span><br><br>
+						<input class="input100" type="file" onchange="Filevalidation()" name="foto"  accept="image/png, image/jpeg"  multiple /> 
 					</div>
 
 					<div class="wrap-input100 validate-input">
@@ -121,9 +121,9 @@
 						
 					</div>
 					
-					<div class="wrap-input100 validate-input">
-						<input class="input100" type="cep" name="cep" pattern="\d{5}-\d{3}||\d{8}">
-						<span class="focus-input100" data-placeholder="CEP (00000-000)"></span>
+					<div class="wrap-input100">
+						<input class="input100" type="cep" name="cep">
+						<span class="focus-input100" data-placeholder="CEP (00000000)"></span>
 					</div>
 					<p class="text-center text-muted">Campos com * são obrigatórios no preenchimento deste formulário.</p>
 					<div class="container-login100-form-btn">
