--- a/templates/home_sem_login_bkp.html
+++ b/templates/home_sem_login_bkp.html
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
   <!-- Bootstrap CSS -->
@@ -79,78 +79,6 @@
         flex: auto;
         align-self: auto;
     }
-
-    .top-recipts {
-      width: 160px;
-      margin: 10px 20px;
-      height: 220px;
-    }
-
-    .top-recipts-container {
-      display: flex;
-      border: 1px solid black;
-      flex-direction: column;
-    }
-
-    a {
-      color: black ;
-    }
-
-    @media (max-width: 1440px) {
-      .top-recipts {
-        width: 100px;
-        margin: 10px 20px;
-        height: 190px;
-      }
-
-      .top-recipts-container {
-        width: 51%;
-      }
-    }
-
-    @media (max-width: 500px) {
-      body {
-        min-width: fit-content !important;
-      }
-
-      .container {
-        flex-direction: column !important;
-      }
-
-      .home-sem-login-container {
-        flex-direction: column !important;
-        width: 100% !important;
-        margin-right: 0 !important;
-      }
-
-      .texto-inicio {
-        text-align: center !important;
-        font-size: 27px !important;
-        display: flex !important;
-        margin: auto !important;
-        width: auto !important;
-      }
-
-      .imagem-container {
-        width: 100% !important;
-        display: flex !important;
-        margin-bottom: 30px !important;
-      }
-
-      .imagem {
-        width: 100% !important;
-      }
-
-      .top-recipts-container {
-        width: 95% !important;
-        margin: auto !important;
-      }
-
-      .top-recipts {
-        width: 180px !important;
-        height: 240px !important;
-      }
-    }
 </style>
 </head>
 
@@ -162,7 +90,7 @@
           <img src="{{ url_for('static', filename='images/myrecipelogobranca.png') }}" alt="" width="80" height="80" class="d-inline-block align-text-left">
           My Recipe - Receitas Inteligentes
         </a>
-
+        
           <form class="d-flex gap-2">
             <a class="btn btn-light" style="background-color:#c42020; color: beige;" href="{{ url_for('login') }}" role="button">Login</a>
             <a class="btn btn-light" style="background-color:#c42020; color: beige;" href="{{ url_for('cadastrar_usuario') }}" role="button">Cadastrar</a>
@@ -170,65 +98,54 @@
         </div>
       </div>
     </nav>
-    <div style="
-      display: flex;
-      margin: 20px auto;
-      justify-content: center;
-    " class="container">
-        <div style="
-          display: flex;
-          flex-direction: column;
-          width: 20%;
-          margin-right: 30px;
-        " class="home-sem-login-container">
-            <div style="
-                margin-bottom: 20px;
-            "><label style="
-                  font-weight: 600;
-              " class="texto-inicio">My Recipe é um site de receitas, com inteligência artificial, que recomenda receitas e as encontra por ingredientes, você pode cadastrar e avaliar receitas de outros usuários.</label></div>
-              <div style="
-    width: 100%;
-" class="imagem-container"><img src="static/images/ingredientes_vertical.jpg" alt="solka" class="imagem" style="width: 100%;"></div>
+
+  <div class="flex flex-column" style="align-items:center; margin-top:50px; padding-left: 20%; padding-right: 20%">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="static/images/livro.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
+            <h3>Deixe de lado aquele velho caderno</h3>
+            <p style="color:white">Com o My Recipe, você cadastra suas receitas em poucos minutos.</p>
+          </div>
         </div>
-        <div class="top-recipts-container"><div style="
-    display: flex;
-    justify-content: center;
-    margin-top: 15px;
-"><label style="
-    font-size: 25px;
-">Algumas de nossas melhores receitas</label></div>
-<div style="
-    display: flex;
-    flex-direction: row;
-    max-width: 1050px;
-    width: 100%;
-    flex-wrap: wrap;
-">
-{%for receita in receitas%}
-{% for caminho in paths | selectattr('id_receita', 'equalto', receita.id_receita) %}
-<a href="/login" class="top-recipts"><div>
-        <div><img src="https://my-recipe-receitas.com/static/uploads/recipes/{{receita.id_receita}}/{{caminho.path_imagem}}" alt="mucei" style="
-    width: 100%;
-"></div><div style="
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-"><label>{{receita.titulo}}</label>
-        <label>{{ '%0.1f' |format(receita.media_nota| float)}} <img src="static/images/estrela.png" alt="a" style="
-    width: 25px;
-    height: 25px;
-"> ({{receita.contagem}}) avaliações</label>
+        <div class="carousel-item">
+          <img src="static/images/ingredientes.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
+            <h3>Descubra novas receitas</h3>
+            <p style="color:white">Encontre receitas por ingredientes e sistema de recomendação.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="static/images/truques-chefes-de-cozinha.jpg" class="d-block w-auto" alt="...">
+          <div class="carousel-caption d-block w-auto">
+            <h3>Mão na massa</h3>
+            <p style="color:white">Salve, avalie e prepare receitas especiais.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="false"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="false"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-</div></a>
-{%endfor%}
-{%endfor%}
-</div></div>
-    </div>
+  </div>
+ 
+    
 <div class="flex flex-column" style="margin-top:20px;text-align: center;align-items:center">
     <span style="font-size:40px; color:#c42020"><strong>My Recipe em números</strong></span>
 </div>
 
-<div class="flex flex-row gap-4" style="margin-top:0px;align-items:center">
+<div class="flex flex-row gap-4" style="margin-top:0px;align-items:center">  
   <div class="flex flex-column" style="margin-top:30px;align-items:center">
     <span style="font-size:60px ;"><strong>{{cont_usuarios}}</strong></span>
     <span>Usuários</span>
@@ -240,26 +157,26 @@
   <div class="flex flex-column" style="margin-top:30px;align-items:center">
     <span style="font-size:60px ;"><strong>{{cont_avaliacoes}}</strong></span>
     <span>Avaliações</span>
-  </div>
+  </div>  
 </div>
 
 
 
     {% block conteudo %}
-
+    
     {% endblock %}
 
-
-
+  
+     
     <footer style="position: auto;bottom: -1px;;left:30%;right:30% ;">
       <div class="flex flex-column" style="margin-top:50px;text-align: center; align-items:center; align-self: flex-end;">
         <p>Avalie o sistema em: <a href="https://forms.gle/ghj7DFk2Z5VSKf638" target="_blank">https://forms.gle/ghj7DFk2Z5VSKf638</a></p>
-      </div>
+      </div>  
       <p class="text-center text-muted">© 2022 My Recipe - Receitas Inteligentes</p>
-    </footer>
+    </footer> 
 </body>
 
-
+  
 
 
 
